[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/themes/blue_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes_and_scripts/login/Login.gd" type="Script" id=2]

[node name="Login" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.5
margin_top = -118.0
margin_right = 160.5
margin_bottom = 118.0
theme = ExtResource( 1 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserNameHContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 321.0
margin_bottom = 34.0

[node name="UserNameLabel" type="Label" parent="VBoxContainer/UserNameHContainer"]
margin_top = 5.0
margin_right = 98.0
margin_bottom = 29.0
text = "UserName"

[node name="UserNameText" type="LineEdit" parent="VBoxContainer/UserNameHContainer"]
margin_left = 102.0
margin_right = 321.0
margin_bottom = 34.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
placeholder_text = "Insert Your Name Here"
placeholder_alpha = 0.388

[node name="PasswordHContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 321.0
margin_bottom = 88.0

[node name="PasswordLabel" type="Label" parent="VBoxContainer/PasswordHContainer"]
margin_top = 5.0
margin_right = 89.0
margin_bottom = 29.0
text = "PassWord"

[node name="PasswordText" type="LineEdit" parent="VBoxContainer/PasswordHContainer"]
margin_left = 93.0
margin_right = 321.0
margin_bottom = 34.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
placeholder_text = "Insert Your Password Here"
placeholder_alpha = 0.388

[node name="NotificationLabel" type="Label" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 321.0
margin_bottom = 132.0

[node name="LoginButton" type="Button" parent="VBoxContainer"]
margin_top = 152.0
margin_right = 321.0
margin_bottom = 182.0
text = "LOGIN"

[node name="GoToRegisterButton" type="Button" parent="VBoxContainer"]
margin_top = 202.0
margin_right = 321.0
margin_bottom = 232.0
text = "Create New User"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="VBoxContainer/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="VBoxContainer/GoToRegisterButton" to="." method="_on_GoToRegisterButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
